fix: small caps not rendering correctly on iOS

--- a/packages/website/_includes/base.scss
+++ b/packages/website/_includes/base.scss
@@ -184,10 +184,10 @@ li {
 
 .small-label {
   color: var(--color-text-secondary);
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 600;
-  font-variant: all-small-caps;
   margin-bottom: 0.25rem;
+  text-transform: uppercase;
 }
 
 .newline {
